fix CR Comments: Fix horizontal scroll, Improve styles to match with the design, Delete repetead words, clean styles and clases, Improve lenght of addBook Form, Avoid repeat rules

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,7 @@
   flex-direction: column;
   background-color: var(--white-two);
   border-radius: 4px;
-  width: 87.5rem;
   height: 68.563rem;
-
-  /* width: 90%; */
   box-shadow: 0 0 60px 0 var(--black-5);
   gap: 2.3rem;
 }
