--- a/src/components/AddForm.css
+++ b/src/components/AddForm.css
@@ -1,52 +1,42 @@
 .addBookForm {
-  margin: 1rem 6.25rem;
+  padding: 1rem 6.25rem;
 }
-
 .horizontal-divider {
   height: 0.125rem;
   background-color: #e8e8e8;
   width: 100%;
   margin: 2.5rem 0 1.813rem;
 }
-
 .add-form {
+  display: grid;
+  grid-template-columns: 2fr 1fr 0.5fr;
+  justify-content: space-between;
+  width: 100%;
   margin-top: 20px;
-  display: flex;
-  grid-gap: 32px;
   gap: 32px;
 }
-
 .form-title,
 input {
   font-family: "Montserrat", sans-serif;
 }
-
-.title-input {
-  width: 50%;
-}
-
 .form-title {
   font-size: 1.25rem;
   font-weight: 700;
   letter-spacing: -0.18px;
   color: #888;
 }
-
 input {
+  width: 100%;
   padding: 12px;
   border-radius: 4px;
   border: 1px solid #e8e8e8;
   background-color: #fff;
-  font-size: 1rem;
-  letter-spacing: -0.15px;
-  color: #121212;
-
-  /* width: 50%; */
 }
-
+input::placeholder {
+  color: #c4c4c4;
+}
 .primary-button-big {
   cursor: pointer;
-  width: 20%;
   padding: 12px;
   border-radius: 3px;
   background-color: #0290ff;
@@ -55,5 +45,5 @@ input {
   color: #fff;
   font-size: 0.813rem;
   font-weight: 700;
-  font-family: "Roboto Slab", serif;
+  font-family: 'Roboto Slab', serif;
 }
