--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -8,37 +8,27 @@
   display: flex;
   justify-content: space-between;
   gap: 1rem;
-
-  /* width: 75rem; */
   height: 10.625rem;
   margin: 0 6.25rem;
-  padding: 2rem 9rem 1.625rem 1.688rem;
+  padding: 2rem 7rem 1.625rem 1.688rem;
   border-radius: 4px;
   border: solid 1px var(--white-three);
   background-color: var(--white);
 }
 
 .gender {
-  /* width: 3.063rem; */
-  height: 1.125rem;
-
-  /* margin: 0 2.438rem 0 0; */
-  opacity: 0.5;
   font-family: "Montserrat", sans-serif;
-  font-size: 0.875rem;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
+  height: 1.125rem;
+  opacity: 0.5;
+  font-size: 0.875rem;
   color: #121212;
 }
 
 .author {
-  /* width: 6.688rem; */
+  font-family: 'RobotoSlab', serif;
   height: 1.188rem;
   margin: 0.25rem 0 0;
-  font-family: 'RobotoSlab', sans-serif;
   font-size: 0.875rem;
   font-weight: 300;
   font-stretch: normal;
@@ -49,37 +39,25 @@
 }
 
 .title {
-  /* width: 12.313rem; */
-
-  /* height: 1.813rem; */
-
-  /* margin: 0.188rem 20.188rem 0 0; */
-  font-family: 'RobotoSlab', sans-serif;
+  font-family: 'RobotoSlab', serif;
   font-size: 1.375rem;
   font-weight: bold;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.2px;
   color: #121212;
 }
 
 .actions {
   display: flex;
-  gap: 1rem;
+  padding-top: 1rem;
+  gap: 0.6rem;
 }
 
 .action {
-  /* width: 4.563rem; */
   height: 1.188rem;
   margin: 0.188rem 0.938rem 0.125rem 0;
-  font-family: 'RobotoSlab', sans-serif;
+  font-family: 'RobotoSlab', serif;
   font-size: 0.875rem;
   font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #4386bf;
   border: none;
   background: none;
@@ -89,8 +67,6 @@
 .vertical-separator {
   width: 0.125rem;
   height: 1.5rem;
-
-  /* margin: 0.75rem 1.063rem 0 0.938rem; */
   border: solid 1px var(--white-three);
 }
 
@@ -100,16 +76,12 @@
 
 .progress-container {
   display: flex;
-  flex-direction: row;
   align-items: center;
   gap: 2rem;
 }
 
 .circular-progress-container {
-  /* width: 5.625rem; */
-
-  /* height: 5.625rem; */
-  padding: 0.63rem 0.625rem 0.75rem 0.75rem;
+  padding: 0 1.3rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -138,9 +110,9 @@
 }
 
 .progress-divider {
-  /* width: .125rem; */
+  width: .125rem;
   height: 4.375rem;
-  margin: 0 3.688rem 0 4.938rem;
+  margin: 0 1rem;
   background-color: #e8e8e8;
 }
 
@@ -149,13 +121,11 @@
   flex-direction: column;
   grid-gap: 20px;
   gap: 20px;
-
-  /* width: 14rem; */
 }
 
 .current-chapter,
 .current-chapter-label {
-  font-family: 'RobotoSlab', sans-serif;
+  font-family: 'RobotoSlab', serif;
   font-weight: 300;
   color: #121212;
 }
@@ -171,9 +141,7 @@
   border: none;
   background-color: #0290ff;
   border-radius: 3px;
-  padding: 8px 24px;
-  font-family: 'RobotoSlab', sans-serif;
-  font-weight: 300;
-  letter-spacing: 0.5px;
+  padding: 0.4rem 1.1rem;
+  font-family: 'RobotoSlab', serif;
   color: #fff;
 }
