--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
   --bubble-gum-pink: #ff5ab7;
   --black: #1e1e1e;
   --pinkish-grey: #c7c7c7;
@@ -20,7 +19,6 @@
 
 body {
   margin: 0;
-  box-sizing: border-box;
   font-family:
     -apple-system,
     BlinkMacSystemFont,
@@ -37,7 +35,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   padding: 9.313rem 6.25rem;
   background-color: var(--pale-grey);
-  width: 100rem;
-
+  /* width: 90%; */
+  /* width: 100rem; */
   /* height: 89.625rem; */
 }
